# atom_engine

./: .clang-format  .cmake-format.json  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  flake.nix  imgui.ini
CMake/: CPM.cmake  CompilerPresets.json  ConfigPresets.json  PlatformPresets.json
Docs/: DevelopmentGuide.md  StyleGuide.md
Source/Private/: Application.cpp  Main.cpp
Source/Private/Window/: GlfwWindow.cpp  GlfwWindow.h  LinuxWindow.h  Window.cpp  WindowManager.cpp  WindowsWindow.h
Source/Public/Atom/: Engine.h
Source/Sandbox/: Sandbox.cpp
assets/shaders/: basic.frag  basic.vert  msdf_text.frag  msdf_text.vert
cmake/: architecture_presets.json  atom_engine-config.cmake  compiler_presets.json  config_presets.json  generator_presets.json
editor/: editor.cpp  editor_layer.cpp  editor_layer.h  panels.h
editor/drawers/: camera_component_drawer.h  property_drawer.h  property_drawer_provider.h  sprite_component_drawer.h  transform_component_drawer.h
editor/panels/: entity_explorer_panel.cpp  entity_explorer_panel.h  inspector_panel.cpp  inspector_panel.h  panel.h
include/: atom.core.h  atom.engine.h  atom.logging.h  config.h.in
include/atom/engine/: application.h  ecs.h  events.h  filesystem.h  logging.h  math.h  time.h
sandbox/: sandbox.cpp  sandbox.cppm  sandbox_layer.cpp  sandbox_layer.h  sandbox_layer_2d.cpp  sandbox_layer_2d.cppm  sandbox_layer_2d.cxx  sandbox_layer_2d.h
sandbox/assets/shaders/: flat_color.glsl  texture.glsl  texture_shader.glsl
source/: atom.engine.cppm  entt.cppm
source/engine/: application.cpp  application.cppm  application.cxx  application.impl.cppm  box2d.cppm  colors.cppm  ecs.cppm  events.cppm  filesystem.cppm  glfw.cppm  gui.cppm  imgui.cppm  inputs.cppm  layers.cppm  logging.cppm  main.cpp  main.cppm  math.cppm  opengl.cppm  physics.cppm  rendering.cppm  shaders.cppm  time.cppm  windows.cppm
source/engine/ecs/: box_collider2d_component.cppm  box_collider2d_component.cxx  camera_component.cppm  camera_component.cxx  entity.cppm  entity.cxx  entity_component.cppm  entity_component.cxx  entity_events.cppm  entity_manager.cppm  entity_manager.cxx  rigidbody_component.cppm  rigidbody_component.cxx  sprite_component.cppm  sprite_component.cxx  system.cppm  system.cxx  system_manager.cppm  system_manager.cxx  transform_component.cppm  transform_component.cxx
source/engine/glfw/: glfw_input_manager.h  glfw_keyboard.cpp  glfw_keyboard.h  glfw_keyboard_key_conversions.h  glfw_mouse.cpp  glfw_mouse.h  glfw_mouse_button_conversions.h  glfw_window.cpp  glfw_window.h  input_manager_impl.cppm  keyboard.cppm  keyboard_conversions.cppm  mouse.cppm  mouse_conversions.cppm  window.cppm  window_user_data.cppm
source/engine/imgui/: imgui_keyboard_conversions.cppm  imgui_keyboard_conversions.cxx  imgui_keyboard_conversions.h  imgui_keyboard_key_conversions.h  imgui_layer.cpp  imgui_layer.cppm  imgui_layer.cxx  imgui_mouse_conversions.cppm  imgui_mouse_conversions.cxx  imgui_mouse_conversions.h
source/engine/inputs/: input_device.cppm  input_manager.cpp  input_manager.cppm  input_manager.cxx  input_manager_impl.cppm  keyboard.cppm  keyboard_events.cppm  keyboard_keys.cppm  mouse.cppm  mouse_buttons.cppm  mouse_events.cppm
source/engine/layers/: layer.cppm  layer_stack.cppm
source/engine/opengl/: opengl_context.cpp  opengl_context.cppm  opengl_frame_buffer.cpp  opengl_frame_buffer.cppm  opengl_frame_buffer.h  opengl_index_buffer.cpp  opengl_index_buffer.cppm  opengl_index_buffer.h  opengl_renderer_api.cpp  opengl_renderer_api.cppm  opengl_renderer_api.cxx  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.cppm  opengl_shader.h  opengl_shader_factory_impl.cpp  opengl_shader_factory_impl.cppm  opengl_shader_factory_impl.cxx  opengl_shader_factory_impl.h  opengl_shader_factory_impl.impl.cppm  opengl_texture2d.cpp  opengl_texture2d.cppm  opengl_texture2d.cxx  opengl_texture2d.h  opengl_vertex_array.cpp  opengl_vertex_array.cppm  opengl_vertex_array.h  opengl_vertex_buffer.cpp  opengl_vertex_buffer.cppm  opengl_vertex_buffer.h
source/engine/physics/: physics2d_system.cppm  physics2d_system.cxx
source/engine/rendering/: buffer_layout.cppm  buffer_layout.h  camera.cppm  camera.h  font.cppm  font.cxx  frame_buffer.cpp  frame_buffer.cppm  frame_buffer.cxx  frame_buffer.h  graphics_context.cppm  index_buffer.cpp  index_buffer.cppm  index_buffer.cxx  index_buffer.h  index_buffer.impl.cppm  orthographic_camera.cpp  orthographic_camera.cppm  orthographic_camera.h  orthographic_camera_controller.cpp  orthographic_camera_controller.cppm  orthographic_camera_controller.h  render_command.cpp  render_command.cppm  render_command.h  render_command.impl.cppm  render_system.cppm  render_system.cxx  renderer.cpp  renderer.cppm  renderer.h  renderer2d.cppm  renderer2d.cxx  renderer_2d.cpp  renderer_2d.cppm  renderer_2d.cxx  renderer_2d.h  renderer_api.cpp  renderer_api.cppm  renderer_api.h  (+36 more)
source/engine/shaders/: shader_compiler.cppm  shader_compiler.cxx  shader_compiler_impl.cppm  spirv_compiler.cppm  spirv_compiler.cxx
source/engine/window/: window_manager.cpp
source/engine/windows/: window.cppm  window_events.cppm  window_manager.cpp  window_manager.cppm  window_manager.cxx  window_manager.impl.cppm
source/engine/world/: world.cppm  world.cxx
src/: application.cpp  engine.cpp  imgui_layer.cpp  imgui_layer.h  layer_stack.cpp  main.cpp  math.cpp
src/engine/: application.cpp
src/engine/glfw/: glfw_input_manager.h  glfw_keyboard.cpp  glfw_keyboard.h  glfw_keyboard_key_conversions.h  (+6 more)
src/glfw/: glfw_input_manager.h  glfw_keyboard.h  glfw_keyboard_key_conversions.h  glfw_mouse.h  glfw_mouse_button_conversions.h  glfw_window.h  input_manager.cpp  keyboard.cpp  keyboard_key_codes_conversion.cpp  mouse.cpp  mouse_button_code_conversions.cpp  window.cpp
src/inputs/: input_device.cpp  input_manager.cpp  input_manager_impl.cpp  keyboard.cpp  keyboard_events.cpp  keyboard_key_codes.cpp  mouse.cpp  mouse_button_codes.cpp  mouse_events.cpp
src/window/: glfw_window.cpp  window.cpp  window_events.cpp  window_manager.cpp
(+38 files in other folders)
